feat(promo): refactor generatePromoContext method and enforce non-null parameters in PromoView